[project]
name = "devtool"
version = "0.1.0"
description = "Helper tool for development in this project."
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
devtool = "devtool.__main__:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["devtool"]
