[project]
name = "devtool"
version = "0.1.0"
description = "Helper tool for development in this project."
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
devtool = "devtool.__main__:main"


[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pybuild-deps",
    "pip<25.1",
]
rpm-lock = [
    "rpm-lockfile-prototype",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.uv.sources]
rpm-lockfile-prototype = { url = "https://github.com/konflux-ci/rpm-lockfile-prototype/archive/refs/tags/v0.18.0.tar.gz" }


[tool.setuptools]
packages = ["devtool"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-vv"]
log_level = "debug"
